--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,3 +1,6 @@
 FROM nginx:alpine
 COPY frontend/dist/undersounds-frontend-stable-build/ /usr/share/nginx/html
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
+RUN chown -R nginx:nginx /usr/share/nginx/html
+RUN chmod -R 777 /usr/share/nginx/html
+EXPOSE 80
